--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,67 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+@import "primeicons/primeicons.css";
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
+body,
+body .p-component
+{
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+.container{
+    width : 1204px;
+    height : 240px
+}
+
+
+
+.p-tabview .p-tabview-nav li .p-tabview-nav-link{
+    padding : 0.25rem 0.50rem !important;
+    background-color: inherit; 
+    border-radius:0;
+    color : white !important
+}
+
+.p-tabview-nav{
+    background-color: #1b60ae !important;
+}
+
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link{
+    color : #1b60ae !important
+}
+
+.p-tabview .p-tabview-nav li { 
+    background-color: #1b60ae !important;
+}
+
+
+.p-tabview .p-tabview-nav li:hover {
+    background-color: orange !important;
+}
+
+
+.p-tabview .p-tabview-nav li:not(.p-highlight):not(.p-disabled):hover .p-tabview-nav-link{
+    background:inherit !important
+}
+
+.p-tabview .p-tabview-close {
+    margin-left: 1.5rem !important;
+}
+
+
+
+
+.table-container {
+    display: flex;
+    max-width: 100%;
+    overflow-x: auto;
+  }
+
+  .non-pinned-items {
+    overflow-x: auto; 
+  }
+
